[project]
name = "make-query-params-filters"
authors = [{name = "Lucas Gasque", email = "lucasfdg@hotmail.com"}]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/LucasGasque/make-query-params-filters"
Issues = "https://github.com/LucasGasque/make-query-params-filters/issues"

[tool.setuptools]
long_description = "file: README.md"
long_description_content_type = "text/markdown"